--- a/index.html
+++ b/index.html
@@ -196,79 +196,83 @@
 						      	</ul>
 					      	</section>
 
-			<!-- Footer -->
-				<section id="footer">
-					<div class="container">
-						<header>
-							<h2><strong>Contact us:</strong></h2>
-						</header>
-						<div class="row">
-							<div class="col-6 col-12-medium">
-								<section>
-									<form method="post" action="#">
-										<div class="row gtr-50">
-											<div class="col-6 col-12-small">
-												<input name="name" placeholder="Name" type="text" />
+									<!-- Footer -->
+										<section id="footer">
+											<div class="container">
+												<header>
+													<h2> <strong> Contact us: </strong></h2>
+												</header>
+												<div class="row">
+													<div class="col-6 col-12-medium">
+														<section>
+															<form method="post" action="#">
+																<div class="row gtr-50">
+																	<div class="col-6 col-12-small">
+																		<input name="name" placeholder="Name" type="text" />
+																	</div>
+																	<div class="col-6 col-12-small">
+																		<input name="email" placeholder="Email" type="text" />
+																	</div>
+																	<div class="col-12">
+																		<textarea name="message" placeholder="Message"></textarea>
+																	</div>
+																	<div class="col-12">
+																		<a href="#" class="form-button-submit button icon fa-envelope">Send Message</a>
+																	</div>
+																</div>
+															</form>
+														</section>
+													</div>
+													<div class="col-6 col-12-medium">
+														<section>
+															<p>HOUSE REPUBLICAN COMMITEE OF MINNESOTA</p>
+															<div class="row">
+																<div class="col-6 col-12-small">
+																	<ul class="icons">
+																		<li class="icon fa-home">
+																			PO BOX 17400<br />
+																		ST. PAUL, MN 55117 00000<br />
+																		USA
+																		</li>
+																		<li class="icon fa-phone">
+																			(651)-225-8586
+																		</li>
+																		<li class="icon fa-envelope">
+																			<a href="#">info@untitled.tld</a>
+																		</li>
+																	</ul>
+																</div>
+																<div class="col-6 col-12-small">
+																	<ul class="icons">
+																		<li class="icon fa-twitter">
+																			<a href="#">https://twitter.com/mnhrcc</a>
+																		</li>
+																		<li class="icon fa-facebook">
+																			<a href="#">https://www.facebook.com/MNHRCC</a>
+																		</li>
+																	</ul>
+																</div>
+															</div>
+														</section>
+													</div>
+												</div>
 											</div>
-											<div class="col-6 col-12-small">
-												<input name="email" placeholder="Email" type="text" />
+											<div id="copyright" class="container">
+												<ul class="links">
+													<li> PREPARED AND PAID FOR BY THE HRCC: 525 PARK STREET SUITE 245 ST. PAUL, MN 55103
+												</ul>
 											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message"></textarea>
-											</div>
-											<div class="col-12">
-												<a href="#" class="form-button-submit button icon fa-envelope">Send Message</a>
-											</div>
-										</div>
-									</form>
-								</section>
-							</div>
-							<div class="col-6 col-12-medium">
-								<section>
-									<p>HOUSE REPUBLICAN COMMITEE OF MINNESOTA</p>
-									<div class="row">
-										<div class="col-6 col-12-small">
-											<ul class="icons">
-												<li class="icon fa-home">
-													PO BOX 17400<br />
-													ST. PAUL, MN 55117 00000<br />
-													USA
-												</li>
-												<li class="icon fa-phone">
-													(651)-225-8586
-												</li>
-										</div>
-										<div class="col-6 col-12-small">
-											<ul class="icons">
-												<li class="icon fa-twitter">
-													<a href="#">https://twitter.com/mnhrcc</a>
-												</li>
-												<li class="icon fa-facebook">
-													<a href="#">https://www.facebook.com/MNHRCC/</a>
-												</li>
-											</ul>
-										</div>
-									</div>
-								</section>
-							</div>
-						</div>
-					</div>
-					<div id="copyright" class="container">
-						<ul class="links">
-							<li> <i> PREPARED AND PAID FOR BY THE HRCC: 525 PARK STREET SUITE 245 ST. PAUL, MN 55103 <i/>
-						</ul>
-					</div>
-				</section>
+										</section>
 
-  	</div>
+								</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+								<!-- Scripts -->
+									<script src="assets/js/jquery.min.js"></script>
+									<script src="assets/js/jquery.dropotron.min.js"></script>
+									<script src="assets/js/browser.min.js"></script>
+									<script src="assets/js/breakpoints.min.js"></script>
+									<script src="assets/js/util.js"></script>
+									<script src="assets/js/main.js"></script>
 
-	</body>
-</html>
+							</body>
+						</html>
