--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 									<section>
 										<a href="#" class="image featured"><img src="images\Dario Anselmo II.jpg" alt="" /></a>
 										<header>
-											<h3> <b> Dario Anselmo </h3> </b>
+											<h3> <b> Dario Anselmo </b> </h3>
+											<h4> <b> District 49A </b> <h4>
 										</header>
 										    <p>Representative Anselmo is currently serving his first term in office. He represents the city of Edina and district 49A.
 										       Dario is an entrepreneur and small businessman. In 1993 he bought the Fine Line Music Café in downtown Minneapolis building it into a thriving business and a cultural institution. He also pursues commercial real estate ventures. Dario co-founded the Warehouse District Business Association in Minneapolis and served on the board of the Minneapolis Downtown Council for 12 years (from 2000 to 2012).
@@ -103,15 +104,6 @@
                   <section>
 
 								</div>
-													<div class="col-12">
-														<ul class="actions">
-															<li><a href="#" class="button icon fa-file">Tell Me More</a></li>
-														</ul>
-													</div>
-												</div>
-											</div>
-										</section>
-
 		   	 <!-- Banner -->
  <section id="banner">
 	 <div class="container">
@@ -215,10 +207,6 @@
 																	</div>
 																	<div class="col-12">
 																		<textarea name="message" placeholder="Message"></textarea>
-																	</div>
-																	<div class="col-12">
-																		<a href="#" class="form-button-submit button icon fa-envelope">Send Message</a>
-																	</div>
 																</div>
 															</form>
 														</section>
@@ -237,18 +225,15 @@
 																		<li class="icon fa-phone">
 																			(651)-225-8586
 																		</li>
-																		<li class="icon fa-envelope">
-																			<a href="#">info@untitled.tld</a>
-																		</li>
 																	</ul>
 																</div>
 																<div class="col-6 col-12-small">
 																	<ul class="icons">
 																		<li class="icon fa-twitter">
-																			<a href="#">https://twitter.com/mnhrcc</a>
+																		<a href="#">https://twitter.com/mnhrcc</a>
 																		</li>
 																		<li class="icon fa-facebook">
-																			<a href="#">https://www.facebook.com/MNHRCC</a>
+																<a href="#">https://www.facebook.com/MNHRCC</a>
 																		</li>
 																	</ul>
 																</div>
