--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 								>HRCC</a></h1>
 
-							<p> <b> Committed to the fight for Minnesota's values. </b></p>
+							<p> <b> Real men and women committed to the fight for Minnesota's values. </b></p>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -57,6 +57,7 @@
 					<div class="container">
 						<header>
 							<h2> <strong> Ensuring balance for the North Star State </strong></h2>
+							<
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -83,6 +84,7 @@
 										<a href="#" class="image featured"><img src="images\Kathy Lohmer.jpg" alt="" /></a>
 										<header>
 												<h3> <b> Kathy Lohmer </h3> </b>
+												<h4> <b> District 39B </h4> </b>
 											</header>
 											<p> Representative Kathy Lohmer is in her fourth term in the Minnesota House. She represents the communities of Bayport, Baytown Township, Grant, Lake Elmo, Lake St. Croix Beach, Lakeland, Lakeland Shores, Oak Park Heights, Pine Springs, St. Mary’s Point, Stillwater, and West Lakeland Township.
                           As a breast-cancer survivor and the mother of a disabled child, Kathy has a passion for health and human service issues. She was a medical office administrator, and she and her husband have owned a small business for more than 30 years.
@@ -97,7 +99,8 @@
 									<section>
 										<a href="#" class="image featured"><img src="images\Tony Jergens.jpg" alt="" /></a>
 										<header>
-											<h3>Tony Jergens</h3>
+											<h3> <b> Tony Jergens </b> </h3>
+											<h4> <b> District 54B </b> </h4>
 										</header>
 										<p>Representative Tony Jurgens is in his first term in the Minnesota House. He represents portions of Dakota and Washington counties in the southeastern part of the Twin Cities.
                        Tony and his wife Dawn have lived in Cottage Grove for over 23 years and they have two adult daughters. He is employed as an independent insurance agent with InsuranceWorks Agency, Inc. As a result of Tony’s extensive volunteer service to the city of Cottage Grove, in April 2016, he was presented with the Volunteer of the Year Award by the Cottage Grove mayor and city council. Among many other volunteer roles, he served as treasurer of the Cottage Grove Economic Development Authority and chair of the Cottage Grove Public Services Commission. </p>
@@ -107,7 +110,7 @@
 		   	 <!-- Banner -->
  <section id="banner">
 	 <div class="container">
-		 <p>Help Minnesota stay prosperous. Vote Republican November 6th!</p>
+		 <p>Help Minnesota stay prosperous. Vote Republican November 6th! </p>
 	 </div>
  </section>
 
