--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 					<div class="container">
 						<header>
 							<h2> <strong> Ensuring balance for the North Star State </strong></h2>
+							 <h3>
+								 <p> House Republicans stand united with hardworking Minnesota taxpayers. We understand that regulations and high taxes are harmful to our economy. We need people with common sense to drive policy in our House of representatives.
+									   The House Republican Campaign Commitee is currently active ensuring the success of qualifed representatives in the upcoming election on November 6. </p> 
 							<
 						</header>
 						<div class="row aln-center">
