--- a/index.html
+++ b/index.html
@@ -197,7 +197,6 @@
 
 									<!-- Footer -->
 										<section id="footer">
-											<div class="container">
 												<header>
 													<h2> <strong> Contact us: </strong></h2>
 												</header>
@@ -251,7 +250,7 @@
 											</div>
 											<div id="copyright" class="container">
 												<ul class="links">
-													<li> PREPARED AND PAID FOR BY THE HRCC: 525 PARK STREET SUITE 245 ST. PAUL, MN 55103
+													<li> PREPARED FOR USE BY THE HRCC: 525 PARK STREET SUITE 245 ST. PAUL, MN 55103
 												</ul>
 											</div>
 										</section>
