--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
 
 									<!-- Footer -->
 										<section id="footer">
+											<div class="container">
 												<header>
 													<h2> <strong> Contact us: </strong></h2>
 												</header>
