--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 						<header>
 							<h2> <strong> Ensuring balance for the North Star State </strong></h2>
 							 <h3>
-								 <p> House Republicans stand united with hardworking Minnesota taxpayers. We understand that regulations and high taxes are harmful to our economy. We need people with common sense and integrity to drive policy in our House of representatives.
-									   The House Republican Campaign Commitee is currently active ensuring the success of qualifed representatives in the upcoming election on November 6. </p>
+								 <p> House Republicans stand united with hardworking Minnesota taxpayers. We understand that regulations and high taxes are harmful to our economy and must instead focus on more productive alternatives.
+									   We need people with common sense and integrity to drive policy in our House of representatives.
+										 The House Republican Campaign Commitee is currently active ensuring the success of qualifed representatives in the upcoming election on November 6. </p>
 
 											<p> Please meet several of our hardworking candidates. </p>
 						</header>
