--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 								>HRCC</a></h1>
 
-							<p> <b> Real men and women committed to the fight for Minnesota's values. </b></p>
+							<p> <b> Real men and women committed to the fight for Minnesota's value. </b></p>
 
 						<!-- Nav -->
 							<nav id="nav">
