--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
 								>HRCC</a></h1>
 
-							<p> <b> Real men and women committed to the fight for Minnesota's value. </b></p>
+								<embed height="60" type="audio/midi" width="144" src="https://commons.wikimedia.org/wiki/File:Star_Spangled_Banner_instrumental.ogg?embedplayer=yes" width="120" height="120" frameborder="0" ></iframe>
+ volume="80" loop="false" autostart="true" />
+
+							<p> <b> Real men and women committed to the fight for Minnesota's values. </b></p>
 
 						<!-- Nav -->
 							<nav id="nav">
