--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="homepage is-preload">
+		<audio src="The Stars and Stripes Forever.m4a" controls autoplay loop audio/> 
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -22,8 +23,6 @@
 
 								>HRCC</a></h1>
 
-								<embed height="60" type="audio/midi" width="144" src="https://commons.wikimedia.org/wiki/File:Star_Spangled_Banner_instrumental.ogg?embedplayer=yes" width="120" height="120" frameborder="0" ></iframe>
- volume="80" loop="false" autostart="true" />
 
 							<p> <b> Real men and women committed to the fight for Minnesota's values. </b></p>
 
