--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="homepage is-preload">
-		<audio src="The Stars and Stripes Forever.m4a" controls autoplay loop audio/> 
-		<div id="page-wrapper">
+		 <div id="page-wrapper">
 
 			<!-- Header -->
 				<section id="header">
@@ -253,6 +252,8 @@
 												</div>
 											</div>
 											<div id="copyright" class="container">
+												<embed height="60" type="audio/midi" width="144" src="The Stars and Stripes Forever.m4a" width="120" height="120" frameborder="0" ></iframe>
+ volume="80" loop="false" autostart="true" />
 												<ul class="links">
 													<li> PREPARED FOR USE BY THE HRCC: 525 PARK STREET SUITE 245 ST. PAUL, MN 55103
 												</ul>
