--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="homepage is-preload">
+		<audio width="400" controls>
+			<source src="The Stars and Stripes Forever.mp4" type="audio/mpeg">
 		 <div id="page-wrapper">
 
 			<!-- Header -->
@@ -253,7 +255,7 @@
 											</div>
 											<div id="copyright" class="container">
 											<audio>
-												<audio src="jazz.ogg" autoplay></audio>
+												<audio src="" autoplay></audio>
 												<ul class="links">
 													<li> PREPARED FOR USE BY THE HRCC: 525 PARK STREET SUITE 245 ST. PAUL, MN 55103
 												</ul>
