--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="homepage is-preload">
-		<audio width="45" controls>
-			<source src="The Stars and Stripes Forever.mp4" type="audio/mpeg">
 		 <div id="page-wrapper">
 
 			<!-- Header -->
 				<section id="header">
 					<div class="container">
+						<embed src="https://www.loc.gov/item/ihas.100010373/" width="140" height="70" autostart= "true" loop="true">
+						</embed>
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html"
