--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 			<!-- Header -->
 				<section id="header">
 					<div class="container">
-						<embed src="<iframe src="https://www.loc.gov/item/ihas.100010373/?embed=resources" width="600" height="600" frameborder="0" scrolling="no"></iframe>" width="140" height="70" autostart= "true" loop="true">
-						</embed>
+						<embed src="<iframe src="http://www.loc.gov/item/ihas.100010373"
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html"
