--- a/index.html
+++ b/index.html
@@ -17,111 +17,7 @@
 				<section id="header">
 					<div class="container">
 						<embed src="<iframe src="http://www.loc.gov/item/ihas.100010373"
-
-						<!-- Logo -->
-							<h1 id="logo"><a href="index.html"
-
-								>HRCC</a></h1>
-
-
-							<p> <b> Real men and women committed to the fight for Minnesota's values. </b></p>
-
-						<!-- Nav -->
-							<nav id="nav">
-								<ul>
-									<li><a class="icon fa-home" href="index.html"><span>Home</span></a></li>
-									<li>
-										<a href="#" class="icon fa-bar-chart-o"><span>Join us</span></a>
-										<ul>
-											<li><a href="#"></a></li>
-											<li><a href="#">Employment oppertunities</a></li>
-											<li><a href="#">Volunteering oppertunites</a></li>
-											<li>
-												<a href="#">Community involvement</a>
-												<ul>
-													<li><a href="#">Sign up for the mailing list</a></li>
-
-												</ul>
-											</li>
-										</ul>
-									</li>
-									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Candidates</span></a></li>
-									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Contribute</span></a></li>
-									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>Latest</span></a></li>
-								</ul>
-							</nav>
-
-					</div>
-				</section>
-
-			<!-- Features -->
-				<section id="features">
-					<div class="container">
-						<header>
-							<h2> <strong> Ensuring balance for the North Star State </strong></h2>
-							 <h3>
-								 <p> House Republicans stand united with hardworking Minnesota taxpayers. We understand that regulations and high taxes are harmful to our economy and must instead focus on more productive alternatives.
-									   We need people with common sense and integrity to drive policy in our House of representatives.
-										 The House Republican Campaign Commitee is currently active ensuring the success of qualifed representatives in the upcoming election on November 6. </p>
-
-											<p> Please meet several of our hardworking candidates. </p>
-						</header>
-						<div class="row aln-center">
-							<div class="col-4 col-6-medium col-12-small">
-
-								<!-- Feature -->
-									<section>
-										<a href="#" class="image featured"><img src="images\Dario Anselmo II.jpg" alt="" /></a>
-										<header>
-											<h3> <b> Dario Anselmo </b> </h3>
-											<h4> <b> District 49A </b> <h4>
-										</header>
-										    <p>Representative Anselmo is currently serving his first term in office. He represents the city of Edina and district 49A.
-										       Dario is an entrepreneur and small businessman. In 1993 he bought the Fine Line Music Café in downtown Minneapolis building it into a thriving business and a cultural institution. He also pursues commercial real estate ventures. Dario co-founded the Warehouse District Business Association in Minneapolis and served on the board of the Minneapolis Downtown Council for 12 years (from 2000 to 2012).
-                           Dario has served on the board of the Edina Education Fund and now on the board of Edina Give and Go. He has also served as president of the Depression and Bipolar Support Alliance for over 10 years, and he was a long time board member of the Minnesota Mental Health Association.
-                           Dario and his wife Jeanne live in Edina where their three children attend Edina Public Schools. </p>
-
-									</section>
-
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-
-								<!-- Feature -->
-									<section>
-										<a href="#" class="image featured"><img src="images\Kathy Lohmer.jpg" alt="" /></a>
-										<header>
-												<h3> <b> Kathy Lohmer </h3> </b>
-												<h4> <b> District 39B </h4> </b>
-											</header>
-											<p> Representative Kathy Lohmer is in her fourth term in the Minnesota House. She represents the communities of Bayport, Baytown Township, Grant, Lake Elmo, Lake St. Croix Beach, Lakeland, Lakeland Shores, Oak Park Heights, Pine Springs, St. Mary’s Point, Stillwater, and West Lakeland Township.
-                          As a breast-cancer survivor and the mother of a disabled child, Kathy has a passion for health and human service issues. She was a medical office administrator, and she and her husband have owned a small business for more than 30 years.
-                          Kathy and her husband, Greg, live in Stillwater. They have four adult sons and are proud grandparents. </p>
-
-									</section>
-
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-
-								<!-- Feature -->
-									<section>
-										<a href="#" class="image featured"><img src="images\Tony Jergens.jpg" alt="" /></a>
-										<header>
-											<h3> <b> Tony Jergens </b> </h3>
-											<h4> <b> District 54B </b> </h4>
-										</header>
-										<p>Representative Tony Jurgens is in his first term in the Minnesota House. He represents portions of Dakota and Washington counties in the southeastern part of the Twin Cities.
-                       Tony and his wife Dawn have lived in Cottage Grove for over 23 years and they have two adult daughters. He is employed as an independent insurance agent with InsuranceWorks Agency, Inc. As a result of Tony’s extensive volunteer service to the city of Cottage Grove, in April 2016, he was presented with the Volunteer of the Year Award by the Cottage Grove mayor and city council. Among many other volunteer roles, he served as treasurer of the Cottage Grove Economic Development Authority and chair of the Cottage Grove Public Services Commission. </p>
-                  <section>
-
-								</div>
-		   	 <!-- Banner -->
- <section id="banner">
-	 <div class="container">
-		 <p>Help Minnesota stay prosperous. Vote Republican November 6th! </p>
-	 </div>
- </section>
-
-			   <!-- Main -->
+						<embed/>
 <section id="main">
 	<div class="container">
 		<div class="row">
