--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<section id="header">
 					<div class="container">
 						<embed src="<iframe src="http://www.mostfreebies.com/Music/StarsAndStripesForeverUSMarineBand.mp3" width="140" heights="70" autostart="true" loop="true"
-						<embed/>
+					</embed>
 <section id="main">
 	<div class="container">
 		<div class="row">
