--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 			<!-- Header -->
 				<section id="header">
 					<div class="container">
-						<embed src="<iframe src="http://www.loc.gov/item/ihas.100010373"
 <
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html"
@@ -260,6 +259,9 @@
 												</ul>
 											</div>
 										</section>
+									<embed src="http://www.mostfreebies.com/Music/StarsAndStripesForeverUSMarineBand.mp3" width="10" heights="10" autostart="true" loop="true"
+ 								</embed>
+
 
 								</div>
 
